--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-Test readme 
+hva er de konkrete oppgavene?
+hva er forventet i inleveringen?
+hvilket synspunkt skal vi ta utgangspunkt i?
+hvordan bruker vi github????
