--- a/README
+++ b/README
@@ -2,3 +2,4 @@ hva er de konkrete oppgavene?
 hva er forventet i inleveringen?
 hvilket synspunkt skal vi ta utgangspunkt i?
 hvordan bruker vi github????
+Hvilket synespunkt skal vi ta standpunkt fra i selve modulene?
