--- a/README
+++ b/README
@@ -3,3 +3,4 @@ hva er forventet i inleveringen?
 hvilket synspunkt skal vi ta utgangspunkt i?
 hvordan bruker vi github????
 Hvilket synespunkt skal vi ta standpunkt fra i selve modulene?
+Skal vi bruke "Capstone Project - Description" som utgangspunkt i oppgavene?
