--- a/README
+++ b/README
@@ -1,6 +1,2 @@
-hva er de konkrete oppgavene?
-hva er forventet i inleveringen?
-hvilket synspunkt skal vi ta utgangspunkt i?
-hvordan bruker vi github????
-Hvilket synespunkt skal vi ta standpunkt fra i selve modulene?
-Skal vi bruke "Capstone Project - Description" som utgangspunkt i oppgavene?
+Gruppe 13, Sondre Laugerud Moe, Sondre Christoffer Mogen, Macrus Gundersen, Marcus Einarsen, Rikke Larsen, Christoffer Johansen
+In the WBS you wil also find Requierment gathering and analasys
