--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Gruppe 13, Sondre Laugerud Moe, Sondre Christoffer Mogen, Macrus Gundersen, Marcus Einarsen, Rikke Larsen, Christoffer Johansen
+Gruppe 13, Sondre Laugerud Moe, Sondre Christoffer Mogen, Marcus Gundersen, Marcus Einarsen, Rikke Larsen, Christoffer Johansen
 In the WBS you wil also find Requierment gathering and analasys
